<resources>
    <string name="app_name">Stock</string>
    <string name="action_settings">Settings</string>

    <string name="add">Ajouter</string>
    <string name="modify">Modifier</string>
    <string name="ret">Retourner</string>

    <string name="add_category">Ajouter famille</string>
    <string name="add_member">Ajouter member</string>
    <string name="add_component">Ajouter composant</string>
    <string name="add_borrow">Ajouter emprunt</string>

    <string name="modify_component">Modifier composant</string>
    <string name="modify_borrow">Modifier emprunt</string>

    <string name="title">Titre</string>

    <string name="hello_first_fragment">Choisir une famille</string>
    <string name="borrow_component">Emprunter un composant</string>
    <string name="home_borrow">Consulter les emprunts</string>
    <string name="home_member">Consulter les membres</string>
    <string name="home_component">Consulter les composants</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_member">Membres</string>
    <string name="title_category">Familles</string>
    <string name="title_loan">Emprunts</string>
    <string name="cancel">Annuler</string>

    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="quantity">Quantité</string>
    <string name="member">Member</string>
    <string name="component">Component</string>
    <string-array name="borrow_state">
        <item>Intact</item>
        <item>Endommagé</item>
        <item>Gravement endommagé</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>