<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stock.ui.member.MemberFragment"
        android:label="@string/title_member"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.stock.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.stock.ui.borrows.BorrowFragment"
        android:label="@string/title_loan"
        tools:layout="@layout/fragment_borrows" />
</navigation>